# machine-learning-lab

./: .gitignore  README.md  main.py  pyproject.toml
data/quran/: quran.csv
data/quran/tafsirs/english/: hafiz-ibn-kathir.csv  maulana-wahid-uddin-khan.csv  mufti-muhammad-shafi.csv
data/quran/tafsirs/urdu/: dr-israr-ahmad.csv  maulana-wahid-uddin-khan.csv
data/quran/translations/albanian/: hasan-efendi-nahi.csv  sherif-ahmeti.csv
data/quran/translations/amazigh/: ramdane-at-mansour.csv
data/quran/translations/amharic/: sadiq-and-sani.csv
data/quran/translations/assamese/: shaykh-rafeequl-islam-habibur-rahman.csv
data/quran/translations/azeri/: alikhan-musayev.csv  azerbaijani.csv
data/quran/translations/bambara/: baba-mamady-jani.csv  suliman-kanti.csv
data/quran/translations/bengali/: bayaan-foundation.csv  darussalaam-publication.csv  dr-abu-bakr-muhammad-zakaria.csv  tawheed-publication.csv
data/quran/translations/bosnian/: besim-korkut.csv  dar-al-salam-center.csv  muhamed-mehanovic.csv
data/quran/translations/bulgarian/: tzvetan-theophanov.csv
data/quran/translations/central-khmer/: cambodian-muslim-community-development.csv
data/quran/translations/chechen/: magomed-magomedov.csv
notebooks/: linear-regression.ipynb
notebooks/mindmap/: main.ipynb
notebooks/question-answer/: README.md  main.ipynb
notebooks/semantic-search/: README.md  config.py  database.ipynb  search.ipynb
notebooks/simple-linear-regression/: salary-linear-regression.ipynb
notes/: APPLICATIONS.md  CHALLENGES.md  MLDLC.md  TENSORS.md
(+103 files in other folders)
