[project]
name = "machine-learning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "qdrant-client>=1.16.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
