[project]
name = "machine-learning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.128.0",
    "hf-xet>=1.2.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "jupyterlab>=4.5.1",
    "keybert>=0.9.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "pandas>=2.3.3",
    "pyvis>=0.3.2",
    "qdrant-client>=1.16.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
